--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
     margin : 0;
     padding : 0;
     height : 100%;
+    background : #e6f0ff;
 }
 .icons{
     height : 60px; 
@@ -18,6 +19,10 @@ body{
     
     
 }
+.myCards{
+    z-index : 1;
+}
+ 
 #navbar{
     overflow : hidden;
     background : black
@@ -64,8 +69,10 @@ body{
         text-align: center
     }
 }
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
+.bmi-calculator{
+    
+    margin : 100px;
+    
+    background: #141CC2;
+    border-radius: 16px;
+}
