--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body{
 }
 .bmi-calculator{
     
-    margin : 100px;
+    margin-top : 120px;
     
     background: #141CC2;
     border-radius: 16px;
