updating margin of description text for small screens in mindset index file

--- a/mindset/css/MindsetStyle.css
+++ b/mindset/css/MindsetStyle.css
@@ -36,4 +36,7 @@
         background-size: cover;
         background-position: center;
     }
+    .mindset-description-text{
+        margin-top : 50%
+    }
 }
