--- a/calculators/css/calculators-style.css
+++ b/calculators/css/calculators-style.css
@@ -1,11 +1,34 @@
 .bmi-calculator{    
-    margin-top : 120px;
+    margin-top : 20px;
     background: #141CC2;
     border-radius: 16px;
+    box-shadow : 5px 5px 5px gray;
+
 }
 .bmi-description{
-    margin-top : 120px;
+    margin-top : 20px;
     background: #141CC2;
     border-radius: 16px;
+    box-shadow : 5px 5px 5px gray;
 
+}
+.dot{
+    display : none
+}
+@media (max-width : 405px){
+    .dot{
+        display : inline
+    }
+    body{
+        font-style : 25px
+    }
+}
+.bmi{
+    height : 70%;
+    background : #141CC2;
+    margin-top : 20px;
+    margin-bottom : 10px;
+    border : 1px solid gray;
+    box-shadow : 5px 5px 5px gray;
+    padding : 20px;
 }
